--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -35,6 +35,6 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 <welcome-file-list>
-  <welcome-file>登录</welcome-file>
+  <welcome-file>login</welcome-file>
 </welcome-file-list>
 </web-app>
